--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon.png">
   <link rel="stylesheet" href="./style.css">
   
-  <title>padhamNa</title>
+  <title>padamNa</title>
 
   
 </head>
