--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>padhamNa</title>
-    <meta name="keywords" content="online education, e-learning, coaching, education, teaching, learning">
-    <meta name="description" content="Zoomy is a e-learnibg HTML template for all kinds of education, coaching, online education website">
+    <meta name="keywords" content="online education, e-learning, coaching, education, teaching, learning, nepals free learning, free education">
+    <meta name="description" content="Padamna is on a mission to democratize quality education for everyone looking to learn at an affordable price.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="manifest" href="site.webmanifest">
