home page responsive

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                <img class="slide-shape img-three" src="assets/img/slider/003.png" alt="">
                                <img class="slide-shape img-four" src="assets/img/shape/dot-box-1.svg" alt="">
                                <img class="slide-shape img-five" src="assets/img/shape/dot-box-2.svg" alt="">
-                               <img class="slide-shape img-six" src="assets/img/shape/zigzg-1.svg" alt="">
+                               <!-- <img class="slide-shape img-six" src="assets/img/shape/zigzg-1.svg" alt=""> -->
                                <img class="slide-shape img-seven wow fadeInRight animated" data-delay="1.5s" src="assets/img/icon/dot-plan-1.svg" alt="Chose-img">
                                <img class="slide-shape img-eight" src="assets/img/slider/earth-bg.svg" alt="">
                            </div>
