--- a/index.html
+++ b/index.html
@@ -658,7 +658,7 @@
                                         </div>
                                     </div>
                                     <div class="z-instructors__content">
-                                        <h4 class="sub-title mb-10"><a href="instructor-profile.html">Mahabir Pun</a></h4>
+                                        <h4 class="sub-title mb-10"><a href="instructor-profile.html">Prasiddha Panta</a></h4>
                                         <p>Researcher</p>
                                     </div>
                                 </div>
