--- a/index.html
+++ b/index.html
@@ -659,7 +659,7 @@
                                     </div>
                                     <div class="z-instructors__content">
                                         <h4 class="sub-title mb-10"><a href="instructor-profile.html">Prasiddha Panta</a></h4>
-                                        <p>Researcher</p>
+                                        <p>Frontend engineer</p>
                                     </div>
                                 </div>
                             </div>
